[tool.poetry]
name = "df-python-template"
version = "0.1.0"
description = ""
authors = ["Dorian Frances <dfrances.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "df_python_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
